--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-hello world
+<!DOCTYPE html>
+<html>
+<head> 
+<meta charset="utf-8"> 
+<title>ptmind</title> 
+</head> 
+<body>
+
+<button type="button" onclick="alert('hello world')">点我!</button>
+ 
+</body>
+</html>
