--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head> 
-<meta charset="utf-8"> 
-<title>ptmind</title> 
-</head> 
+<head>
+<meta charset="utf-8">
+<title>page</title>
+</head>
 <body>
-
-<button type="button" onclick="alert('hello world')">点我!</button>
- 
+    
+    <h1>我的第一个标题</h1>
+    <h1>我的第二个标题</h1>
+    <h1>我的第三个标题</h1>
+    <h1>我的第四个标题</h1>
+    <h1>我的第五个标题</h1>
+    <h1>我的第六个标题</h1>
+    <h1>我的第七个标题</h1>
+    
 </body>
 </html>
