--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 <!-- Ptengine Tag -->
 <script src="https://js.ptengine.jp/76lf5kxn.js"></script>
 <!-- End Ptengine Tag -->
+
+<!-- Ptengine Tag -->
+<script src="https://js.ptengine.com/16gpxe9t.js"></script>
+<!-- End Ptengine Tag -->
 </head>
 <body>
     
