--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>page</title>
 <!-- Ptengine Tag -->
-<script src="https://js.ptengine.jp/76lf5kxn.js"></script>
+<!--<script src="https://js.ptengine.jp/76lf5kxn.js"></script>-->
 <!-- End Ptengine Tag -->
 
 <!-- Ptengine Tag -->
