new page index3.html

--- a/index2.html
+++ b/index2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>page</title>
+<title>page1</title>
 <!-- Ptengine Tag -->
 <!--<script src="https://js.ptengine.jp/76lf5kxn.js"></script>-->
 <!-- End Ptengine Tag -->
@@ -13,14 +13,13 @@
 </head>
 <body>
     
-    <h1>我的第一个标题</h1>
+    <h1>第三个界面，步码，从index跳转到该界面我的第一个标题</h1>
     <h1>我的第二个标题</h1>
     <h1>我的第三个标题</h1>
     <h1>我的第四个标题</h1>
     <h1>我的第五个标题</h1>
     <h1>我的第六个标题</h1>
     <h1>我的第七个标题</h1>
-    <imput type="button" onclick="location.href=('index3.html')" value="跳转到index3"/>
     
 </body>
 </html>
